# Simulationssoftware-EcoVisionLabs

./: .gitignore  CAPEX_OPEX_IMPLEMENTIERUNG.md  LICENSE  README.md  README_UI.md  START_SCRIPTS_README.md  extra.md  pyproject.toml  requirements.txt  start_app.bat  start_app.sh  start_app_ecovision.bat  start_app_ecovision.sh  start_app_venv.bat  start_app_venv.sh  test.py  test_load_profile_calculation.py  test_load_profile_detail.py  test_load_profile_integration.py  test_summengleichheit.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
docs/: CLEANUP_SUMMARY.md  CODE_REVIEW_UND_REFACTORING.md  LEGACY_CLEANUP_ABSCHLUSS.md  Last_Berechnung_new.md  README.md  REFACTORING_SUMMARY.md  architecture.md  clean-structure-plan.md  code_features_aktuell.md  core-modules.md  csv_calculation_mode.md  konzept.md  lastprofil_integration.md  scoring-system.md  simulation-modules.md  storage_logic_v3_byMichi.md  technische_planung.md  test.md  ui-modules.md  verbrauch_simulation_dokumentation.md  waermepumpen_simulation.md
docs/archive/: konzept.md
docu/: histogram_feature.md  konzept.md
documentation/: technische_planung.md
legacy/: README.md
legacy/deprecated_code/: simulation_backup.py
legacy/old_plotting/: plotting_formated.py
output/: output.md
output/csv/: Skalierte_Netzlast_2030 (ref-2023, prog-2035, studie-Agora)_12112025_1536.csv  Skalierte_Netzlast_2035_12112025_000425.csv  Skalierte_Netzlast_2045 (ref-2023, prog-2045, studie-Ariadne - REMod-Mix)_12112025_1609.csv  dfaed.csv  ee_anteil_verteilung.csv  ee_anteil_verteilung_prozent.csv  teeeet.csv
output/test_plots/: Verarbeitete Daten 2020-2025 Summe.xlsx
raw-data/: BDEW-Standardlastprofile-G25.csv  BDEW-Standardlastprofile-H25.csv  BDEW-Standardlastprofile-L25.csv  Instalierte_Leistung_2015-2019.csv  Instalierte_Leistung_2020-2025.csv  Lastprofile 2024 BMWK(G25).csv  Lastprofile 2024 BMWK(H25).csv  Lastprofile 2024 BMWK(L25).csv  Lastprofile 2024 BMWK(S25).csv  Lastprofile 2024 BMWK.xlsx  Lufttemperatur-2019.csv  Lufttemperatur-2021.csv  Prognosedaten_Studien.csv  Prognosedaten_Studien_test.csv  Realisierte_Erzeugung_2025_Jan-Juni_Stunde_test.csv  Waermepumpen-Standartlastprofile.csv  emobility_profile_S2030.csv  raw-data.md  szenario_beispiel.yaml
scenarios/: Szenario_Beispiel_SW.yaml  medium_heavy_software_test.yaml  szenario_beispiel.yaml
scenarios/EVL_own/: S0_Balanced_Reference_1.0.yaml  S1_EE_Max_MinBackup_1.0.yaml  S2_Speicher_Fokus_Elektrisch_1.0.yaml  S3_Wasserstoff_Zentral_1.0.yaml  S4_Elektrifizierung_Extrem_1.0.yaml  S5_Demand_Side_Flex_Max_1.0.yaml  S6_Netz_Europa_Integration_1.0.yaml  S7_Backup_Minimal_Risiko_1.0.yaml  S8_Kostenminimierung_Least_Cost_1.0.yaml  S9_Resilienz_Extrem_1.0.yaml  S9_Resilienz_Extrem_2.0.yaml
scenarios/Studien_rebuild/: Agora_1.0.yaml  bdi_1.0.yaml  dena_1.0.yaml
scenarios/Szenario 2030/: Agora 2030_1.0.yaml  BDI-230_1.0.yaml  Stress-2030_1.0.yaml  Stress_Reserve-2030_1.0.yaml  dena-2030_1.0.yaml
scenarios/Szenario 2045/: 2045-H2-HEAVY_1.0.yaml  2045-HIGH_ELEC_1.0.yaml  2045-REF_1.0.yaml  2045-STRESS_1.0.yaml  Agora_KN2045_1.0.yaml
scratch/: Erweiterte Speicherlogik.xlsx  Excel_Logik_Extrakt.txt  MS6_änderungen_slides.txt  extract_logic_from_excel.py  fix_encoding.py  remove_deprecated.py  test_integration.py  test_scenario_loading.py  test_storage_cost_fix.py
scripts/: run_ui_v1.py  run_ui_v2.py  ui_runner.py
source-code/: config.json  config.py  config_manager.py  constants.py  data_handling_test.py  data_manager.py  data_processing.py  errors.py  io_handler.py  main.py  main_custom_calc.py  main_demo.py  main_ui-v1.py  main_ui-v2.py  plotting.py  plotting_formated.py  plotting_formated_st.py  plotting_plotly.py  plotting_plotly_st.py  plotting_test.py  plotting_v3.py  scenario_manager.py  streamlit_ui.py  test.py  user_interface.py  user_interface_v0_2.py  user_interface_v2.py
source-code/.streamlit/: config.toml
source-code/data_processing/: balance_calculator.py  calculation_engine.py  col.py  consumption_simulation.py  e-mobility_simulation.py  e_mobility_simulation.py  economic_calculator.py  gen.py  generation_profile.py  (+7 more)
src/: run_ui.py
tests/: README.md  check_day_type.py  debug_v2g.py  debug_v2g_improved.py  test_adaptive_preload.py  test_calculation_modes.py  test_config_manager.py  test_consumption_holidays.py  test_consumption_simulation_full.py  test_consumption_validation.py  test_emobility_realistic.py  test_load_profile_integration.py  test_logic_deep_analysis.py  test_numba.py  test_summengleichheit.py  test_v2g_share.py  test_yaml_backwards_compatibility.py
tests_old/: agent_verification.py  test_calculation_modes.py
(+68 files in other folders)
