[tool.poetry]
name = "simulationssoftware-ecovisionlabs"
version = "1.0.3"
description = "EcoVisionLabs simulations software"
package-mode = false
readme = "README.md"
authors = ["EcoVisionLabs"]
license = "MIT"
homepage = "https://github.com/m1k058/Simulationssoftware-EcoVisionLabs"
repository = "https://github.com/m1k058/Simulationssoftware-EcoVisionLabs"
keywords = ["energy", "simulations", "visualization", "streamlit", "plotly"]

[tool.poetry.dependencies]
python = "^3.12,<3.13"  # Numba requires Python 3.12
streamlit = "^1.51.0"
pandas = "^2.3.3"
numpy = "^1.26.4"
plotly = "^6.4.0"
pyyaml = "^6.0"
holidays = "*"
numba = "^0.59.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
# Development/Testing Tools (nur für Entwickler)
pytest = "^8.0.0"
pytest-cov = "^4.0"
ruff = "^0.6"  # Linter + Formatter (ersetzt black + isort)

# Optional: Type Checking
# mypy = "^1.0"

#[tool.poetry.scripts]
# Streamlit is started via start_app.bat/sh. No console entry needed.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# === Ruff Configuration (Modern Linter/Formatter) ===
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]  # pycodestyle, pyflakes, isort, naming
ignore = ["E501"]  # Ignore line too long (handled by formatter)

# === Pytest Configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"